[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/goblin.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Goblin.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 6 )

[node name="Goblin" type="KinematicBody2D"]
position = Vector2( -5, -6 )
z_index = 26
collision_layer = 4
collision_mask = 18
script = ExtResource( 2 )

[node name="Polygons" type="Node2D" parent="."]

[node name="Head" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 3, 0, 3, 5, 8, 5, 8, 0 )
uv = PoolVector2Array( 3, 0, 3, 5, 8, 5, 8, 0 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="Body" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 3, 5, 3, 10, 6, 10, 6, 5 )
uv = PoolVector2Array( 3, 5, 3, 10, 6, 10, 6, 5 )
bones = [ NodePath("Body"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="LeftArm" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 0, 5, 0, 6, 3, 6, 3, 5 )
uv = PoolVector2Array( 0, 5, 0, 6, 3, 6, 3, 5 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 1, 1, 1, 1 ) ]

[node name="RightArm" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 6, 5, 6, 6, 9, 6, 9, 5 )
uv = PoolVector2Array( 6, 5, 6, 6, 9, 6, 9, 5 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="LeftLeg" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 3, 10, 3, 12, 4, 12, 4, 10 )
uv = PoolVector2Array( 3, 10, 3, 12, 4, 12, 4, 10 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="RightLeg" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 5, 10, 5, 12, 6, 12, 6, 10 )
uv = PoolVector2Array( 5, 10, 5, 12, 6, 12, 6, 10 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="Rig" type="Skeleton2D" parent="."]

[node name="Body" type="Bone2D" parent="Rig"]
position = Vector2( 4.5, 7.5 )
rest = Transform2D( 1, 0, 0, 1, 4.5, 7.5 )

[node name="Head" type="Bone2D" parent="Rig/Body"]
position = Vector2( 0, -2.5 )
rotation = -1.5708
rest = Transform2D( -4.37114e-08, -1, 1, -4.37114e-08, 0, -2.5 )
default_length = 5.0

[node name="RightLeg" type="Bone2D" parent="Rig/Body"]
position = Vector2( 1, 2.5 )
rotation = 1.5708
rest = Transform2D( -4.37114e-08, 1, -1, -4.37114e-08, 1, 2.5 )
default_length = 2.0

[node name="LeftLeg" type="Bone2D" parent="Rig/Body"]
position = Vector2( -1, 2.5 )
rotation = 1.5708
rest = Transform2D( -4.37114e-08, 1, -1, -4.37114e-08, -1, 2.5 )
default_length = 2.0

[node name="RightArm" type="Bone2D" parent="Rig/Body"]
position = Vector2( 1.5, -2 )
rest = Transform2D( 1, 0, 0, 1, 1.5, -2 )
default_length = 3.0

[node name="LeftArm" type="Bone2D" parent="Rig/Body"]
position = Vector2( -1.5, -2 )
rotation = 3.14159
rest = Transform2D( -1, -8.74228e-08, 8.74228e-08, -1, -1.5, -2 )
default_length = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.5, 6 )
shape = SubResource( 1 )

[node name="Visibility" type="VisibilityEnabler2D" parent="."]
position = Vector2( 4.5, 6 )
scale = Vector2( 0.45, 0.6 )

[node name="CollDetect" type="Node2D" parent="."]

[node name="Hitbox" type="Area2D" parent="CollDetect"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollDetect/Hitbox"]
position = Vector2( 4.5, 6 )
shape = SubResource( 2 )

[node name="Cast" type="RayCast2D" parent="CollDetect"]
position = Vector2( 4.5, 3.5 )
enabled = true
cast_to = Vector2( 1024, 0 )
collision_mask = 19
collide_with_areas = true

[node name="Misc" type="Node" parent="."]

[node name="Hit" type="Timer" parent="Misc"]
wait_time = 0.1
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
[connection signal="timeout" from="Misc/Hit" to="." method="_on_Hit_timeout"]
